--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ botocore = {version = "^1.34.110", optional = true}
 aiohttp = "^3.9.5"
 fastembed = {version = "^0.3.0", optional = true}
 
+jupyter = "^1.0.0"
 [tool.poetry.extras]
 hybrid = ["pinecone-text"]
 local = ["torch", "transformers", "tokenizers", "huggingface-hub", "llama-cpp-python"]
